# NN-Trading

./: .gitignore  README.md  analytics.py  app.py  backtest.py  config.py  data_gathering.py  diagnostics.py  evaluation_metrics.py  evaluator.py  features.py  get_data.py  horizon_labeler.py  live_inference.py  main.py  model.py  model_backtest.py  models.py  nn_backtest.py  nn_model.py  oracle_backtest.py  paper_trading.py  pyproject.toml  result.json  result_export.py  set_label.py  train_model.py  train_nn.py  trainer.py  training_utils.py  txt.txt  ui_utils.py  visualisation.py  visuals.py
backtest_results/: trade_log_dashboard.html
backtest_results/diagnostics/: diagnostic_summary.json
engine/: backtester.py  data_handler.py  features.py  visuals.py
models/: direction_nn.pt  eval_test.json  eval_val.json  nn_metrics.json  scaler_mean.npy  scaler_scale.npy  short_model_eth.pth  short_model_eth_best.pth  short_thresholds.json  trading_model.pth
neural_engine/: backtest_engine.py  backtest_oracle.py  backtest_short.py  export_model.py  feature_utils.py  labeler.py  model.py  pattern_confidence.py  train.py
reports/: model_diagnostics.json  model_report.json
results/longshort_transformer/: results.json
results/models/: scaler_mean.npy  scaler_scale.npy  short_model_eth.pth
results/oracle/: results.json
saved_models/: trading_model_v1.pt
strategies/: base.py  oracle.py  random.py  short_nn_strategy.py
tests/: test_label_backtester_consistency.py
training_short_only/: backtest_short.py  feature_utils.py  model.py  train.py
web/: app.py
(+3 files in other folders)
